name:                  keiretsu
version:               0.1.0
synopsis:              Process orchestration for development and integration testing
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Development, Testing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

executable keiretsu
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    src
    ghc-options:
        -threaded
        -Wall
        -O2
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-N

    build-depends:
          async
        , ansi-terminal        >= 0.6
        , base                 >  4.5 && < 5
        , bytestring
        , cmdtheline
        , directory
        , filepath
        , io-streams
        , network
        , process
        , shqq
        , text
        , unix
        , unordered-containers
        , yaml
