name:                  keiretsu
version:               0.2.0
synopsis:              Process orchestration for development and integration testing
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Development, Testing
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/keiretsu.git

executable keiretsu
    default-language:  Haskell2010
    hs-source-dirs:    src
    main-is:           Main.hs

    ghc-options:
        -threaded
        -Wall
        -O2
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-N

    build-depends:
          async
        , ansi-terminal        >= 0.6
        , attoparsec
        , base                 >  4.6 && < 5
        , bytestring
        , containers
        , directory
        , filepath
        , hslogger
        , io-streams
        , network
        , optparse-applicative == 0.9.*
        , process              >= 1.2
        , unix
