name:                  keiretsu
version:               0.4.0
synopsis:              Process orchestration for development and integration testing
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Development, Testing
build-type:            Simple
cabal-version:         >= 1.10

description:
    Process orchestration for development and integration testing

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/keiretsu.git

executable keiretsu
    default-language:  Haskell2010
    hs-source-dirs:    src
    main-is:           Main.hs

    ghc-options:       -Wall -funbox-strict-fields -threaded -with-rtsopts=-N

    build-depends:
          aeson
        , async
        , ansi-terminal        >= 0.6
        , base                 >  4.6 && < 5
        , bytestring
        , directory
        , filepath
        , hslogger
        , conduit              == 1.1.*
        , conduit-extra
        , network
        , optparse-applicative == 0.9.*
        , process              >= 1.2
        , text
        , unix
        , unordered-containers
        , yaml
